[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/textures/turret.png" type="Texture" id=1]
[ext_resource path="res://entities/enemies/Turret.gd" type="Script" id=2]
[ext_resource path="res://entities/enemies/TurretProjectile.tscn" type="PackedScene" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 449.908

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16.8352, 32.3497 )

[node name="Turret" type="StaticBody2D"]
collision_layer = 4
collision_mask = 4
script = ExtResource( 2 )
projectile_scene = ExtResource( 3 )

[node name="FireTimer" type="Timer" parent="."]

[node name="FirePosition" type="Position2D" parent="."]
position = Vector2( 0, -30.0339 )

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource( 1 )

[node name="body" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[connection signal="body_shape_entered" from="DetectionArea" to="." method="_on_DetectionArea_body_shape_entered"]
[connection signal="body_shape_exited" from="DetectionArea" to="." method="_on_DetectionArea_body_shape_exited"]
